# env360

./: .gitignore  README.md  todo.md
backend/: .gitignore  Dockerfile  Makefile  PERMISSION_EXAMPLES.md  QUICKSTART.md  README.md  docker-compose.local.yml  docker-compose.override.yml.example  docker-compose.yml  env.example  pyproject.toml  setup-poetry.sh
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  100e127def81_merge_heads1.py  481b7672b9f5_merge_heads5.py  78113f0f8e98_merge_heads2.py  879b51a6e362_initial_schema.py  942761e6c93a_merge_heads2.py  aa74801a0684_merge_heads4.py  add_admin_configs_table.py  add_cluster_id_to_environments.py  add_deployment_queue_and_events.py  add_description_to_service.py  add_downstream_overrides_to_deployments.py  add_environment_id_to_deployments.py  add_environment_type_to_kubernetes_clusters.py  add_idx_deployments_service_created_at.py  add_kubernetes_clusters.py  add_service_versions_and_deployments.py  add_steps_to_deployments.py  add_workflow_uuid_to_deployments.py  add_workflow_uuid_to_environment_configs.py  cc22b8e1e187_merge_heads.py  drop_deploy_queue_events.py  move_repo_runtime_to_service_config.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: auth.py  router.py
backend/app/core/: __init__.py  config.py  database.py  dependencies.py  middleware.py  oauth.py  security.py
backend/app/core/k8s/: apply.py  connection.py  health.py  manifest.py
backend/app/graphql_api/: __init__.py  resolvers.py  router.py  schema.py  types.py
backend/app/models/: __init__.py  cluster.py  config.py  environment.py  oauth_state.py  permission.py  project.py  service.py  user.py  variable.py  versioning.py
backend/app/schemas/: __init__.py  config.py  environment.py  permission.py  project.py  service.py  user.py
backend/app/workflows/: dbos_deploy.py  deployment_worker.py
(+76 files in other folders)
